manifests/authorization-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      role: authorization
  template:
    metadata:
      labels:
        role: authorization
    spec:
      containers:
      - image: fabianmm34/chatapp:authorization303
        name: authorization
        ports:
        - containerPort: 4002
---

apiVersion: v1
kind: Service
metadata:
  name: authorization
spec: 
  ports: 
  - port: 4002
    targetPort: 4002
  selector: 
    role: authorization
