manifests/mongodb1-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: mongodb1
  template:
    metadata:
      labels:
        role: mongodb1
    spec:
      containers:
      - image: mongo
        name: mongodb1
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb1
spec: 
  ports: 
  - port: 27017
    targetPort: 27017
  selector: 
    role: mongodb1
