manifests/mongodb2-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb2
spec:
  replicas: 1
  selector:
    matchLabels:
      role: mongodb2
  template:
    metadata:
      labels:
        role: mongodb2
    spec:
      containers:
      - image: mongo
        name: mongodb2
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb2
spec: 
  ports: 
  - port: 27017
    targetPort: 27017
  selector: 
    role: mongodb2
