manifests/mongodb3-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb3
spec:
  replicas: 1
  selector:
    matchLabels:
      role: mongodb3
  template:
    metadata:
      labels:
        role: mongodb3
    spec:
      containers:
      - image: mongo
        name: mongodb3
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb3
spec: 
  ports: 
  - port: 27017
    targetPort: 27017
  selector: 
    role: mongodb3
