manifests/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb2
  labels:
    app: mongodb2
spec:
  clusterIP: None
  ports: 
  - port: 27017
    targetPort: 27017
  selector: 
    app: mongodb2
