manifests/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb3
  labels:
    app: mongodb3
spec:
  clusterIP: None
  ports: 
  - port: 27017
    targetPort: 27017
  selector: 
    app: mongodb3
