manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:   
  rules:
    - host: chat-app.fabian
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000       
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql
                port:
                  number: 4000
